# opencv_as

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/yaxiu/opencv/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DefineOpencvImpl.hpp  ImageProc.cpp  ImageProc.h  JniThreadFun.hpp  MatFun.cpp  MatFun.h  Random.hpp  TupleVaArgFun.hpp  log.h  native-lib.cpp
app/src/main/java/com/yaxiu/opencv/: CVType.kt  CallbackInMainThread.kt  FaceDetection.kt  ImgprocHelper.kt  Mat.kt  NavActivity.kt  Opencv.kt
app/src/main/java/com/yaxiu/opencv/ui/face/: FaceRecognitionFragment.kt  HomeViewModel.kt
app/src/main/java/com/yaxiu/opencv/ui/mat/: GalleryViewModel.kt  Mat.kt  MatFragment.kt  OperateBitmap.kt
app/src/main/java/com/yaxiu/opencv/ui/native/: NativeFragment.kt  SlideshowViewModel.kt
app/src/main/java/com/yaxiu/opencv/ui/principle/: PrincipleFragment.kt
app/src/main/java/com/yaxiu/opencv/ui/qqeffects/: QQEffectsFragment.kt
app/src/main/res/layout/: app_bar_nav.xml  fragment_face.xml  fragment_gallery.xml  fragment_principle.xml  fragment_q_q_effects.xml  fragment_slideshow.xml
app/src/main/res/menu/: activity_main_drawer.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/yaxiu/opencv/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
